# TPlayer

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
accessibility/: build.gradle
accessibility/src/main/: AndroidManifest.xml
accessibility/src/main/res/layout/: activity_access.xml
accessibility/src/main/res/values/: strings.xml
accessibility/src/main/res/xml/: qq.xml  wifi.xml
app/: build.gradle
app/libs/: lib-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about.html
app/src/main/res/drawable/: ic_nav_add_selector.xml  progressbar_selector.xml  tab_icon_explore.xml  tab_icon_me.xml  tab_icon_new.xml  tab_icon_tweet.xml
app/src/main/res/layout/: activity_about.xml  activity_demo_list_view.xml  activity_feature.xml  activity_guide.xml  activity_login.xml  activity_main.xml  activity_movie_detail.xml  activity_other_user_home.xml  activity_splash.xml  activity_test.xml  activity_va.xml  activity_video.xml  fragment_base_title.xml  fragment_base_viewpager.xml  fragment_dynamic_tab.xml  fragment_explore.xml  fragment_feature.xml  fragment_home.xml  fragment_home_tab.xml  fragment_movie.xml  fragment_nav.xml  fragment_tweet.xml  item_list_feature.xml  item_list_movie.xml  item_test.xml  layout_list_view_footer.xml  layout_nav_item.xml  main_tab_name_user.xml  recycler_footer_view.xml  tab_item_other_user.xml  test.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
auto_update/: build.gradle
auto_update/src/main/: AndroidManifest.xml
auto_update/src/main/res/values/: strings.xml
bdb/: 00000000.jdb  je.config.csv  je.stat.csv
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: native-lib.cpp
ffmpeg/src/main/java/com/less/ffmpeg/: FFmpegActivity.java  FFmpegUtil.java
ffmpeg/src/main/res/layout/: activity_ffmpeg.xml
ffmpeg/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
hook/: build.gradle
hook/src/main/: AndroidManifest.xml
hook/src/main/res/layout/: activity_hook.xml
hook/src/main/res/values/: strings.xml
maven/com.just.agentweb/agentweb/3.0.0-rc/8d28a053cd87df629df16a11fc93cf8571d9f1ba/: agentweb-3.0.0-rc.aar
maven/com.just.agentweb/agentweb/3.0.0-rc/c909a2f98478751a81ae7680fe7a19c058b9d6a6/: agentweb-3.0.0-rc.pom
plugin/: build.gradle
plugin/src/main/: AndroidManifest.xml
plugin/src/main/res/values/: strings.xml
security/: CMakeLists.txt  build.gradle
security/src/androidTest/java/com/less/security/: ExampleInstrumentedTest.java
security/src/main/: AndroidManifest.xml
security/src/main/cpp/: native-lib.c
security/src/main/java/com/less/security/: DynamicSO.java  FileUtil.java  MusicService.java  Security.java
security/src/test/java/com/less/security/: ExampleUnitTest.java
test/: build.gradle  proguard-rules.pro
test/src/main/: AndroidManifest.xml
test/src/main/res/layout/: activity_html_detail.xml  activity_main.xml  activity_spider.xml  activity_spider_setting.xml  item_html.xml
test/src/main/res/values/: strings.xml  styles.xml
tvplayer/: build.gradle
tvplayer/src/main/: AndroidManifest.xml
tvplayer/src/main/res/drawable/: control_shape.xml  img_live_videopause.xml  tv_download_selector.xml
tvplayer/src/main/res/layout/: activity_progressbar.xml  activity_tvplayer.xml  include_bottom.xml  include_center.xml  include_ex.xml  include_fullscreen_loading.xml  include_top.xml  item_list_ex.xml  layout_adview.xml  layout_ex_list.xml  layout_top_menu.xml  layout_video_control.xml
tvplayer/src/main/res/values/: attrs.xml  color.xml  strings.xml
valib/: build.gradle
vitamio/: build.gradle  proguard-rules.pro
vitamio/src/main/: AndroidManifest.xml
zxing/: build.gradle
zxing/src/main/: AndroidManifest.xml
(+237 files in other folders)
